--- a/HW1/app/src/main/res/values/strings.xml
+++ b/HW1/app/src/main/res/values/strings.xml
@@ -13,4 +13,9 @@
     <string name="_1">1</string>
     <string name="_3">3</string>
     <string name="_7">7</string>
+    <string name="name">Name</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="send">Send</string>
+    <string name="go_back">Go Back</string>
+    <string name="defaultspeeddial">-</string>
 </resources>
